IDE-1930 Add portal runtime for supporting all 7.0 bundles

--- a/tools/plugins/com.liferay.ide.server.core/plugin.xml
+++ b/tools/plugins/com.liferay.ide.server.core/plugin.xml
@@ -225,6 +225,10 @@
       <portalBundle
             class="com.liferay.ide.server.core.portal.PortalJettyBundleFactory"
            type="jetty">
-      </portalBundle>      
+      </portalBundle>
+      <portalBundle
+            class="com.liferay.ide.server.core.portal.PortalGlassfishBundleFactory"
+           type="jetty">
+      </portalBundle>            
    </extension>
 </plugin>
