--- a/tools/plugins/com.liferay.ide.project.ui/plugin.xml
+++ b/tools/plugins/com.liferay.ide.project.ui/plugin.xml
@@ -1224,7 +1224,7 @@
              category="com.liferay.ide.project.ui.liferay"
              class="com.liferay.ide.project.ui.upgrade.animated.UpgradeView"
              icon="icons/e16/migration-tasks.png"
-             id="com.liferay.ide.project.ui.migrationView"
+             id="com.liferay.ide.project.ui.upgradeView"
              name="Liferay 7 Upgrade View"
              restorable="true">
       </view>
