--- a/maven/plugins/com.liferay.ide.maven.ui/plugin.xml
+++ b/maven/plugins/com.liferay.ide.maven.ui/plugin.xml
@@ -238,6 +238,29 @@
 			</enablement>
 		</objectContribution>
 	</extension>
+   <extension
+         point="org.eclipse.ui.popupMenus">
+      <objectContribution
+            adaptable="true"
+            id="com.liferay.ide.server.ui.popup.server"
+            objectClass="org.eclipse.wst.server.core.IServer">
+         <visibility>
+           <and>
+              <objectState
+                    name="serverType"
+                    value="com.liferay.*">
+              </objectState>
+            </and>
+         </visibility>
+         <action
+               class="com.liferay.ide.maven.ui.action.TargetPlatformServiceUPdateAction"
+               enablesFor="1"
+               icon="icons/e16/m2e-liferay.png"
+               id="com.liferay.ide.maven.ui.action.targetPlatformServiceUPdateAction"
+               label="Update Service Target Platform">
+         </action>
+      </objectContribution>
+   </extension>	
 	<extension
 		point="org.eclipse.core.expressions.propertyTesters"
 	>
